# libmikmod

./: .cproject  .gitignore  .project  Makefile.am  Makefile.in  acconfig.h  config.h  config.h.in  configure  configure.in
dlapi/: Makefile.in  dl_hpux.c
docs/: .gitignore  Makefile.in  mikmod.html  mikmod.info  mikmod.texi
dos/: Makefile.in
dos/include/: Makefile.in  dosdma.h  dosgus.h  dosirq.h  dossb.h  doswss.h  libgus.h
dos/src/: Makefile.in  dosdma.c  dosgus.c  dosirq.c  dossb.c  doswss.c
drivers/: Makefile.am  Makefile.in  drv_AF.c  drv_aiff.c  drv_aix.c  drv_alsa.c  drv_dart.c  drv_ds.c  drv_esd.c  drv_gp32.c  drv_hp.c  drv_mac.c  drv_nas.c  drv_nos.c  drv_os2.c  drv_oss.c  drv_osx.c  drv_pipe.c  drv_qnx.c  drv_qsa.c  drv_raw.c  drv_sam9407.c  drv_sb.c  drv_sgi.c  drv_stdout.c  drv_sun.c  drv_ultra.c  drv_wav.c  drv_win.c  drv_wss.c
examples/simpleplay/: splay.c
examples/simpleplayFP/: splayFP.c
examples/simpleplayMEM/: mmloader.c  splayMEM.c
examples/soundeffects/: soundeffects.c
include/: .gitignore  Makefile.in  mikmod.h.in  mikmod_internals.h
libmikmod/: .gitignore  Makefile.in
loaders/: Makefile.in  load_669.c  load_amf.c  load_asy.c  load_dsm.c  load_far.c  load_gdm.c  load_gt2.c  load_imf.c  load_it.c  load_m15.c  load_med.c  load_mod.c  load_mtm.c  load_okt.c  load_s3m.c  load_stm.c  load_stx.c  load_ult.c  load_uni.c  load_xm.c
macintosh/: Makefile.in  mikmod.h  mikmod.h.in
macosx/: mikmod.h  mikmod.h.in
mmio/: Makefile.in  mmalloc.c  mmerror.c  mmio.c
os2/: Makefile.in  configure.cmd
playbook/: config.h  mikmod.h  mikmod_build.h  mikmod_internals.h
playercode/: Makefile.in  mdreg.c  mdriver.c  mdulaw.c  mloader.c  mlreg.c  mlutil.c  mplayer.c  munitrk.c  mwav.c  npertab.c  sloader.c  virtch.c  virtch2.c  virtch_common.c
posix/: Makefile.in  memcmp.c  strcasecmp.c  strdup.c  strstr.c
qnx/: mikmod.h
win32/: Makefile.in  mikmod.h  mikmod_build.h
